// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzqPZZ bWcfft"
>
  <li
    className="sc-fzolEj tqzav"
  >
    <span
      className="sc-fznWqX boOzlI"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzolEj tqzav"
  >
    <span
      className="sc-fznWqX boOzlI"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzolEj tqzav"
  >
    <span
      className="sc-fznWqX boOzlI"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;

exports[`Inline Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzqPZZ bWcfft"
>
  <li
    className="sc-fzolEj sc-fzqBkg hSHQRD"
  >
    <span
      className="sc-fznWqX boOzlI"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzolEj sc-fzqBkg hSHQRD"
  >
    <span
      className="sc-fznWqX boOzlI"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzolEj sc-fzqBkg hSHQRD"
  >
    <span
      className="sc-fznWqX boOzlI"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;
